# Project_Curs1

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
TEMP/: views_v1.py
data/: .~lock.operations.xls#  operations.xls
logs/: card_operations  currency_exchange  read_file  reports  services  stock_prices  top_transactions
src/: card_processing.py  currate_api.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_card_operations.py  test_curate_api.py  test_currate_api.py  test_services.py  test_utils.py  test_views.py
